[form-builder][components] Fix checkbox boolean spacing

--- a/packages/@sanity/components/src/toggles/Checkbox.css
+++ b/packages/@sanity/components/src/toggles/Checkbox.css
@@ -13,7 +13,6 @@
 .root {
   position: relative;
   display: flex;
-  margin-bottom: var(--small-padding);
 }
 
 .input {
